--- a/05_CSS_intro/Randomizer/package.json
+++ b/05_CSS_intro/Randomizer/package.json
@@ -9,6 +9,8 @@
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-sass": "^5.0.0",
+    "macha": "^0.0.0",
+    "mocha": "^9.1.3",
     "sass": "^1.45.0",
     "yarn": "^1.22.17"
   },
