--- a/13_HW/package.json
+++ b/13_HW/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+
   "scripts": {
-    "start": "webpack"
+    "start": "webpack serve",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/core": "7.16.12",
@@ -39,12 +41,23 @@
     "svg-url-loader": "7.1.1",
     "typescript": "4.5.5",
     "webpack": "5.67.0",
-    "webpack-cli": "4.9.2"
+    "webpack-cli": "4.9.2",
+    "postcss-loader": "6.2.1",
+    "resolve-url-loader": "5.0.0",
+    "css-modules-typescript-loader": "4.0.1",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-preset-env": "7.3.1",
+    "postcss-normalize": "10.0.1",
+    "ts-jest": "27.1.3",
+    "jest": "27.5.1"
   },
   "devDependencies": {
     "cross-env": "7.0.3",
     "dotenv": "16.0.0",
     "dotenv-expand": "7.0.0",
-    "scss": "0.2.4"
+    "scss": "0.2.4",
+    "webpack-dev-server": "4.7.4",
+    "@types/jest": "27.4.0",
+    "babel-jest": "27.4.6"
   }
 }
