--- a/09_Application_Calculator/package.json
+++ b/09_Application_Calculator/package.json
@@ -27,7 +27,8 @@
     "gulp-sass": "5.1.0",
     "prettier": "2.5.1",
     "sass": "1.45.2",
-    "through2": "4.0.2"
+    "through2": "4.0.2",
+    "mathjs": "10.1.1"
   },
   "devDependencies": {
     "@types/gulp": "4.0.9",
