--- a/15_Node/packages/server/package.json
+++ b/15_Node/packages/server/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "nodemon": "2.0.15",
     "typescript": "4.5.5",
-    "aws-sdk": "^2.1071.0",
+    "aws-sdk": "2.1073.0",
     "dotenv": "16.0.0",
     "imagemagick": "^0.1.3",
     "request": "^2.88.2",
